--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,7 +1,6 @@
 :root {
   // base
-  --font-family: 'Roboto', sans-serif;
-  --second-family: 'TT Firs Neue', sans-serif;
+  --font-family: 'Lato', sans-serif;
   --content-width: 1290px;
   --container-offset: 31px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
@@ -16,9 +15,12 @@
   --color-grey-light: #cacaca;
   --color-grey: #999;
   --color-grey-dark: #4a4a4a;
+  --color-grey-2: #38495a;
   --color-hash: #202020;
   --color-address: rgba(32, 32, 32, 0.85);
   --color-dark: #000;
 
   --color-debug: rgba(51, 51, 51, 0.3);
+
+  --color-ultramarine: rgba(146, 148, 248, 0.6);
 }
