--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -43,4 +43,6 @@
   /* 40px → 48px */
   --text-4xl: clamp(3rem, calc(2.0625rem + 1.953125vw), 3.625rem);
   /* ------------------------------------*/
+
+  --header-height: 81px;
 }
