--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -2,3 +2,9 @@
 @import './mixins/font-face.scss';
 @import './mixins/disable-mob-hover.scss';
 @import './mixins/crop-text.scss';
+
+@mixin align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
