--- a/src/assets/styles/components/parallax-stars.scss
+++ b/src/assets/styles/components/parallax-stars.scss
@@ -14,16 +14,24 @@ $shadows-small: multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
+.stars {
+  position: absolute;
+  animation: animStar 100s linear infinite;
+
+  &::after {
+    content: ' ';
+    position: absolute;
+    top: -2000px;
+  }
+}
+
 @mixin stars($size, $box-shadow) {
   width: $size;
   height: $size;
   background: transparent;
   box-shadow: $box-shadow;
-  animation: animStar 100s linear infinite;
+
   &:after {
-    content: ' ';
-    position: absolute;
-    top: -2000px;
     width: $size;
     height: $size;
     background: transparent;
@@ -57,4 +65,7 @@ $shadows-big: multiple-box-shadow(100);
   z-index: 100;
   right: 1em;
   bottom: 1em;
+  padding: 0.4rem 0.7rem;
+  min-height: 20px;
+  font-size: var(--text-sm);
 }
