--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -7,10 +7,10 @@
 
   // colors
   --color-light: #fff;
-  --color-yellow-light: #ff6e30;
-  --color-yellow: #bc572b;
-  --color-yellow-dark: #ce4307;
-  --color-red-light: #f06666;
+  // --color-yellow-light: #ff6e30;
+  // --color-yellow: #bc572b;
+  // --color-yellow-dark: #ce4307;
+  // --color-red-light: #f06666;
   --color-bg-input: #e9e9e9;
   --color-grey-light: #cacaca;
   --color-grey: #999;
