--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -8,3 +8,11 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin gradient-text {
+  font-family: var(--font-family), sans-serif;
+  background: -webkit-linear-gradient(white, var(--color-ultramarine));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
