--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -21,9 +21,10 @@ body {
   font-family: var(--font-family, sans-serif);
   font-style: normal;
   font-weight: 300;
-  font-size: 33px;
+  font-size: var(--text-lg);
   line-height: 1.2;
   background-color: var(--color-light);
+  color: var(--color-light);
 }
 
 img {
@@ -40,6 +41,11 @@ p,
 ul,
 figure {
   margin: 0;
+}
+
+a,
+button {
+  @include gradient-text();
 }
 
 a {
@@ -63,18 +69,27 @@ sup {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: center;
   height: 100vh;
   width: 100vw;
-  // @include align-center();
 }
-
-// .is-hidden {
-//   display: none !important; /* stylelint-disable-line declaration-no-important */
-// }
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.section-offset {
+  margin-bottom: 55px;
+}
+
+.section-title {
+  margin-bottom: 2rem;
+  font-weight: 300;
+  font-size: var(--text-2xl);
+  letter-spacing: 3px;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+  @include gradient-text();
 }
 
 /* BUTTONS
@@ -87,7 +102,8 @@ sup {
 }
 
 @mixin btn-active {
-  box-shadow: 1px 1px 25px 10px var(--color-ultramarine);
+  box-shadow: var(--box-shadow-glow);
+  // box-shadow: 0 0 12px 2px var(--color-ultramarine);
 }
 
 .btn-active {
@@ -102,7 +118,7 @@ sup {
   // min-height: 50px;
   // min-width: 150px;
   font-weight: 400;
-  font-size: 16px;
+  font-size: var(--text-base);
   line-height: 19px;
   text-decoration: none;
   text-transform: uppercase;
@@ -173,7 +189,7 @@ sup {
     font-family: var(--second-family);
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--text-base);
     line-height: 21px;
     background-repeat: no-repeat;
     background-position: 3px 1px;
@@ -208,7 +224,7 @@ sup {
   padding: 15px 23px;
   resize: none;
   font-weight: 400;
-  font-size: 16px;
+  font-size: var(--text-base);
   line-height: 19px;
   background-color: var(--color-grey-dark);
   color: var(--color-grey-light);
@@ -251,7 +267,7 @@ input.form-field {
       left: 23px;
       font-family: var(--font-family);
       font-weight: 400;
-      font-size: 9px;
+      font-size: var(--text-xs);
       line-height: 11px;
       color: var(--color-red-light) !important;
     }
@@ -266,7 +282,7 @@ input.form-field {
 .gradient-text {
   font-family: var(--font-family), sans-serif;
   background: -webkit-linear-gradient(white, var(--color-ultramarine));
-  background-clip: text;
+  // background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
