--- a/src/assets/styles/components/header-component.scss
+++ b/src/assets/styles/components/header-component.scss
@@ -1,15 +1,6 @@
-// @mixin align-center {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
-
 .header {
-  // position: absolute;
-  // z-index: 100;
-  // width: 100vw;
-  margin-bottom: 50px;
-  height: var(--header-height);
+  padding: 20px 0;
+  height: 80px;
 
   &__container {
     @include align-center();
@@ -20,35 +11,33 @@
   }
 
   .nav {
-    align-items: center;
+    @include align-center();
     margin-right: auto;
     margin-left: auto;
+    width: 100vw;
 
     &__close {
       display: none;
     }
     &__list {
-      padding: 20px;
       @include align-center();
-      max-width: 752px;
+      justify-content: space-between;
+      width: 100%;
     }
 
     &__item {
       position: relative;
-      padding: 10px;
       @include align-center();
 
       &:not(:last-child) {
-        margin-right: 52px;
+        margin-right: auto;
       }
 
       .nav__link {
-        padding: 0 5px;
+        padding: 10px 15px;
         font-family: var(--second-family);
         font-weight: 400;
         font-size: var(--text-base);
-        line-height: 21px;
-        color: var(--color-light);
         transition: color 0.3s ease-in-out;
 
         &:focus {
@@ -90,6 +79,7 @@
   }
 
   .router-link-exact-active {
-    box-shadow: 1px 1px 25px 10px var(--color-ultramarine);
+    // box-shadow: 1px 1px 25px 10px var(--color-ultramarine);
+    box-shadow: var(--box-shadow-glow);
   }
 }
