--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -112,6 +112,7 @@ sup {
 
 .btn {
   position: relative;
+  // z-index: 500;
   border: 1px solid var(--color-ultramarine);
   overflow: hidden;
   padding: 13px 19px;
@@ -291,11 +292,8 @@ input.form-field {
 -----------------------------------*/
 .typewriter {
   overflow: hidden;
-  // border-right: 0.15em solid var(--color-ultramarine);
   white-space: nowrap;
-  // margin: 0 auto;
-  // letter-spacing: 0.15em;
-  animation: typing 2s steps(30, end);
+  animation: typing 3s steps(30, end);
 }
 
 @keyframes typing {
@@ -330,6 +328,54 @@ input.form-field {
 }
 
 .icon {
-  // border: 1px solid #fef206;
   cursor: pointer;
+}
+
+.download-link {
+  padding: 5px;
+  font-weight: 300;
+  font-size: var(--text-sm);
+  line-height: 1.5;
+}
+
+.link {
+  position: relative;
+  z-index: 1000;
+  margin: 0;
+  padding: 0;
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: var(--text-base);
+  transition: color 0.3s ease-in-out;
+
+  &:focus {
+    outline-offset: 2px;
+    outline: 1px solid var(--color-ultramarine);
+  }
+
+  @include hover {
+    color: var(--color-ultramarine);
+    outline: none;
+  }
+
+  &:active {
+    @include btn-active();
+    outline: none;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-ultramarine);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
 }
