--- a/src/assets/styles/components/experience-view.scss
+++ b/src/assets/styles/components/experience-view.scss
@@ -13,76 +13,45 @@
     border-bottom-width: 1px;
     padding: 1rem;
     font-weight: 300;
-    font-family: var(--text-base);
     line-height: 1.5;
-    cursor: pointer;
 
     &__time-interval {
+      margin: -20px;
+      padding: 20px;
+      display: inline-block;
+      width: 100%;
       font-size: var(--text-base);
       line-height: 1.25rem;
       color: #e5e7eb;
+      cursor: pointer;
+    }
+
+    &__content {
+      height: 0;
+      overflow: hidden;
+      transform-origin: top;
+      transition: height 0.2s linear;
+
+      &.open {
+        height: 165px !important;
+        overflow-y: auto;
+      }
     }
 
     &__title {
+      padding-top: 12px;
+      padding-bottom: 12px;
       font-family: var(--font-family);
       font-size: var(--text-lg);
       line-height: 1.75rem;
       font-weight: 700;
     }
 
-    &__content {
-      // min-height: 0;
-      height: 0;
-      overflow: hidden;
-      transform-origin: top;
-      transition: height 0.08s ease-in-out;
-
-      &.open {
-        // min-height: 30px !important;
-        height: 137px !important;
-        // height: min(100%, 300px) !important;
-        // height: clamp(30px, min(100%, 300px), 350px) !important;
-      }
+    &__desc {
+      font-size: var(--text-md);
+      line-height: 1;
+      font-weight: 300;
     }
-
-    // &__company-link {
-    //   padding: 10px 15px;
-    //   font-family: var(--second-family);
-    //   font-weight: 400;
-    //   font-size: var(--text-base);
-    //   transition: color 0.3s ease-in-out;
-
-    //   &:focus {
-    //     outline-offset: 2px;
-    //     outline: 1px solid var(--color-ultramarine);
-    //   }
-
-    //   @include hover {
-    //     color: var(--color-ultramarine);
-    //     outline: none;
-    //   }
-
-    //   &:active {
-    //     @include btn-active();
-    //     outline: none;
-    //   }
-
-    //   &::after {
-    //     content: '';
-    //     position: absolute;
-    //     left: 0;
-    //     bottom: 0;
-    //     width: 100%;
-    //     height: 2px;
-    //     background-color: var(--color-ultramarine);
-    //     opacity: 0;
-    //     transition: opacity 0.3s ease-in-out;
-    //   }
-
-    //   &:hover::after {
-    //     opacity: 1;
-    //   }
-    // }
   }
 }
 
