created portfolio page and store

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -23,6 +23,8 @@
 
   --color-ultramarine: #9294f8;
   // --color-ultramarine: rgba(146, 148, 248, 0.6);
+  --color-ultramarine-dark: #4d4e82;
+  --color-ultramarine-light: #d7d8fb;
 
   --box-shadow-glow: 0 0 12px 2px var(--color-ultramarine);
 
