--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -7,6 +7,10 @@ html {
   &::-webkit-scrollbar {
     width: 0 !important;
   }
+
+  // TODO ?
+  // cursor: url('@/assets/images/spaceship.svg'), auto;
+  // cursor: url('@/assets/images/spaceship.svg') 2 2, default;
 }
 
 *,
@@ -53,6 +57,10 @@ a {
   text-decoration: none;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+}
+
 sup {
   top: 0;
 }
@@ -78,7 +86,7 @@ sup {
 }
 
 .section-offset {
-  margin-bottom: 55px;
+  margin-bottom: 35px;
 }
 
 .section-title {
@@ -103,7 +111,6 @@ sup {
 
 @mixin btn-active {
   box-shadow: var(--box-shadow-glow);
-  // box-shadow: 0 0 12px 2px var(--color-ultramarine);
 }
 
 .btn-active {
@@ -126,9 +133,9 @@ sup {
   text-align: center;
   color: #f4f4f4;
 
-  &:focus {
-    outline: none;
-  }
+  // &:focus {
+  //   outline: none;
+  // }
 
   &.focus-visible {
     box-shadow: 1px 1px 25px 10px var(--color-ultramarine);
@@ -323,6 +330,7 @@ input.form-field {
 }
 
 .svg-container {
+  display: inline-block;
   width: 40px;
   height: 40px;
 }
@@ -378,4 +386,10 @@ input.form-field {
   &:hover::after {
     opacity: 1;
   }
+}
+
+.icon-link {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
