--- a/src/assets/styles/components/portfolio-view.scss
+++ b/src/assets/styles/components/portfolio-view.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // background-color: transparent;
   }
 
   &__title {
@@ -16,26 +15,12 @@
     text-align: center;
   }
 
-  &__tabs {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-  }
-
-  .asd {
-    position: relative;
-  }
-
-  .ssd {
-    position: absolute;
-  }
-
   &__content {
     padding: 30px 15px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 22px;
     max-height: 78vh;
     overflow-y: auto;
   }
