--- a/src/assets/styles/components/tabs-component.scss
+++ b/src/assets/styles/components/tabs-component.scss
@@ -1,6 +1,14 @@
 .tabs {
-  padding: 10px 0;
+  padding: 10px 15px;
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  width: 100%;
+
+  &__btn {
+    display: block;
+    flex-grow: 1;
+    width: 100%;
+    font-size: var(--text-sm);
+  }
 }
