done contacts page; update home page

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -388,6 +388,11 @@ input.form-field {
   }
 }
 
+.link-md {
+  padding: 4px;
+  font-size: var(--text-md);
+}
+
 .icon-link {
   display: inline-block;
   width: 100%;
