--- a/src/assets/styles/components/header-component.scss
+++ b/src/assets/styles/components/header-component.scss
@@ -1,5 +1,5 @@
 .header {
-  cursor: none;
+  // cursor: none;
   padding: 20px 0;
   height: 80px;
 
@@ -39,7 +39,7 @@
       }
 
       .nav__link {
-        cursor: none;
+        // cursor: none;
         padding: 10px 15px;
         width: 100%;
         font-family: var(--second-family);
