--- a/src/assets/styles/components/experience-view.scss
+++ b/src/assets/styles/components/experience-view.scss
@@ -77,6 +77,7 @@
     top: 30px;
     z-index: 20;
     transform: translateX(-50%);
+    padding-top: 2px;
     height: 1rem;
     width: 1rem;
     text-align: center;
@@ -87,5 +88,9 @@
     border-radius: 20%;
     opacity: 1;
     color: #000;
+
+    &.education-icon {
+      background-image: url('@/assets/images/education.svg');
+    }
   }
 }
