--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -29,6 +29,10 @@ body {
   line-height: 1.2;
   background-color: var(--color-light);
   color: var(--color-light);
+
+  @include mobile {
+    font-size: var(--text-base);
+  }
 }
 
 img {
@@ -73,10 +77,18 @@ sup {
   align-items: center;
 }
 
+$container-width-mobile: 320px;
+$width-mobile: 296px;
+
 .container {
   margin: 0 auto;
   padding: 0 var(--container-offset);
   max-width: var(--container-width);
+
+  @include mobile {
+    padding: 0 15px;
+    max-width: $container-width-mobile;
+  }
 }
 
 .site-container {
@@ -86,9 +98,11 @@ sup {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  // width: 100vw;
   width: var(--container-width);
-  // width: 1245px;
+
+  @include mobile {
+    max-width: $container-width-mobile;
+  }
 }
 
 .uppercase {
@@ -97,6 +111,10 @@ sup {
 
 .section-offset {
   margin-bottom: 35px;
+
+  @include mobile {
+    margin-bottom: 20px;
+  }
 }
 
 .section-title {
@@ -108,6 +126,11 @@ sup {
   text-align: center;
   text-transform: uppercase;
   @include gradient-text();
+
+  @include mobile {
+    margin-bottom: 20px;
+    font-size: var(--text-md);
+  }
 }
 
 /* BUTTONS
@@ -129,12 +152,9 @@ sup {
 
 .btn {
   position: relative;
-  // z-index: 500;
   border: 1px solid var(--color-ultramarine);
   overflow: hidden;
   padding: 13px 19px;
-  // min-height: 50px;
-  // min-width: 150px;
   font-weight: 400;
   font-size: var(--text-base);
   line-height: 19px;
@@ -142,10 +162,6 @@ sup {
   text-transform: uppercase;
   text-align: center;
   color: #f4f4f4;
-
-  // &:focus {
-  //   outline: none;
-  // }
 
   &.focus-visible {
     box-shadow: 1px 1px 25px 10px var(--color-ultramarine);
@@ -358,7 +374,7 @@ input.form-field {
 
 .link {
   position: relative;
-  z-index: 1000;
+  // z-index: 1000;
   margin: 0;
   padding: 0;
   font-family: var(--second-family);
