--- a/src/assets/styles/components/home-view.scss
+++ b/src/assets/styles/components/home-view.scss
@@ -1,4 +1,8 @@
 .home {
+  @include mobile {
+    margin-top: -20px;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
@@ -12,24 +16,46 @@
     letter-spacing: 4px;
     line-height: 1.2;
     text-align: center;
+
+    @include mobile {
+      padding-top: 8px;
+      font-size: var(--text-md);
+    }
   }
 
   &__sub-title {
     margin-bottom: 35px;
     max-width: min-content;
     font-size: var(--text-xl);
+
+    @include mobile {
+      margin-bottom: 20px;
+      font-size: var(--text-base);
+    }
   }
 
   .table {
+    @include mobile {
+      word-spacing: -2px;
+    }
+
     &__row {
       display: flex;
       flex-direction: row;
       padding: 3px 0px;
+
+      @include mobile {
+        padding: 0;
+      }
     }
 
     &__col {
       &--1 {
         min-width: 210px;
+
+        @include mobile {
+          min-width: 120px;
+        }
       }
     }
   }
@@ -42,6 +68,10 @@
     flex-direction: column;
     align-items: center;
     background-color: transparent;
+
+    @include mobile {
+      padding: 0 15px;
+    }
   }
 
   &__list {
@@ -49,6 +79,10 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+
+    @include mobile {
+      gap: 8px;
+    }
   }
 
   &__list:not(:last-child) {
@@ -60,11 +94,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    min-height: 65px;
+    min-height: 45px;
   }
 
   &__label {
     font-size: var(--text-base);
     color: var(--color-light);
+
+    @include mobile {
+      font-size: var(--text-xs);
+    }
+  }
+
+  .svg-container {
+    width: 30px;
+    height: 30px;
   }
 }
