--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -65,7 +65,6 @@ a {
   width: 0;
 }
 
-
 sup {
   top: 0;
 }
@@ -370,6 +369,10 @@ input.form-field {
   font-weight: 300;
   font-size: var(--text-sm);
   line-height: 1.5;
+  @include mobile {
+    font-size: var(--text-xs);
+    line-height: 1;
+  }
 }
 
 .link {
