--- a/src/assets/styles/components/experience-view.scss
+++ b/src/assets/styles/components/experience-view.scss
@@ -24,6 +24,12 @@
       line-height: 1.25rem;
       color: #e5e7eb;
       cursor: pointer;
+      @include mobile {
+        margin: -10px;
+        padding: 10px 0;
+        font-size: var(--text-sm);
+        line-height: 1;
+      }
     }
 
     &__content {
@@ -34,6 +40,9 @@
 
       &.open {
         height: 165px !important;
+        @include mobile {
+          height: 135px !important;
+        }
       }
     }
 
@@ -44,12 +53,20 @@
       font-size: var(--text-lg);
       line-height: 1.75rem;
       font-weight: 700;
+      @include mobile {
+        padding: 8px 0;
+        font-size: var(--text-base);
+        line-height: 1;
+      }
     }
 
     &__desc {
       font-size: var(--text-md);
       line-height: 1;
       font-weight: 300;
+      @include mobile {
+        font-size: var(--text-sm);
+      }
     }
   }
 }
@@ -88,6 +105,9 @@
     border-radius: 20%;
     opacity: 1;
     color: #000;
+    @include mobile {
+      top: 22px;
+    }
 
     &.education-icon {
       background-image: url('@/assets/images/education.svg');
