--- a/src/assets/styles/components/portfolio-view.scss
+++ b/src/assets/styles/components/portfolio-view.scss
@@ -8,11 +8,6 @@
   &__title {
     margin-bottom: 10px;
     max-width: min-content !important;
-    font-weight: 300;
-    font-size: var(--text-2xl);
-    letter-spacing: 4px;
-    line-height: 1.2;
-    text-align: center;
   }
 
   &__content {
@@ -25,16 +20,25 @@
     max-height: 78vh;
     overflow-y: auto;
     scrollbar-width: none;
+    @include mobile {
+      padding: 15px;
+    }
   }
 
   .card {
     position: relative;
-    z-index: 100;
+    z-index: 90;
     $img-widht: 350px;
     $img-height: 226px;
+    $img-widht-mob: 290px;
+    $img-height-mob: 193px;
     width: $img-widht;
     height: $img-height;
     cursor: pointer;
+    @include mobile {
+      width: $img-widht-mob;
+      height: $img-height-mob;
+    }
 
     &__front,
     &__back {
@@ -57,6 +61,10 @@
     &__img {
       width: $img-widht;
       height: $img-height;
+      @include mobile {
+        width: $img-widht-mob;
+        height: $img-height-mob;
+      }
     }
 
     &__front {
